# examples-counterexamples

./: Kernel PCA.ipynb  Kernel SVMs.ipynb  Makefile  README.md  Separable data PCA nonseparable.ipynb  pyproject.toml  requirements.txt  setup.py
JuliaExamples/: Manifest.toml  Project.toml  Project.toml.full  build.jl
JuliaExamples/examples/: profiling.jl
JuliaExamples/src/: JuliaExamples.jl  build.jl  image_data.jl
clearml/: gridsearch.py
data/: states.csv
julia/: Project.toml
notebooks/: Arpartition vs sorting.ipynb  Arxiv Text Mining.ipynb  Audio Source Separation RPCA.ipynb  Audio Source Separation.ipynb  Audio in Jupyter - DSP.ipynb  Beer_Advocate_Exploration.ipynb  Binary.ipynb  COIL20 Manifold Learning.ipynb  CoreNLP.ipynb  Game Recommendations.ipynb  Graphical_Models.ipynb  Kernel PCA.ipynb  Logistic Regression with Theano.ipynb  Manifold Learning.ipynb  Metacritic Game Reviews & Factorization Machines.ipynb  NumPy concatenation & stacking.ipynb  Outliers.ipynb  Sampling and Monte Carlo Methods.ipynb  Sentence_Tokenization.ipynb  TextRank_Implementations.ipynb  Word Embeddings on 20 Newsgroups.ipynb  XGBoost for Feature Engineering.ipynb  arXiv Text Mining.ipynb  julia_coil.jl  julia_general.jl
notebooks/Theano/: Autoencoders.ipynb  MLP.ipynb  updates.py  (+3 more)
presentations/: Approximate Nearest Neighbors.ipynb
rust_stuff/: Cargo.toml
scripts/: load_101_categories.sh  load_coil20.sh  load_word_embeddings.sh
src/: coil20_utils.py  convert_glove_2_word2vec.py  fetch_mnist.py  glove_2_word2vec.py  image_plotting_utils.py  load_data_utils.py  utils.py
(+63 files in other folders)
